third_party/move/move-compiler-v2/tests/checking/typing/v1-signer/move_to_missing_signer.exp

Diagnostics:
error: invalid call of `move_to`: argument count mismatch (expected 2 but found 1)
  ┌─ tests/checking/typing/v1-signer/move_to_missing_signer.move:4:9
  │
4 │         move_to<R>(R { f: false })
  │         ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: invalid call of `move_to`: argument count mismatch (expected 2 but found 1)
   ┌─ tests/checking/typing/v1-signer/move_to_missing_signer.move:14:14
   │
14 │         () = move_to<R<bool>>(R<bool> { f: false });
   │              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
